# experiment-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
generator/: seeds.txt
scripts/: generate_tools.py
src/experiment_mcp/: corpus.py  feedback.py  feedback_publisher.py  handles.py  server.py
src/experiment_mcp/generator/: __init__.py  feedback_loop.py  introspection.py  orchestrator.py  prompts.py  rerender.py  template.py
src/experiment_mcp/generator/adapters/: __init__.py  anthropic_api.py  base.py  claude_cli.py
src/experiment_mcp/tools/curated/: README.md
tests/: test_generator.py  test_smoke.py
