[project]
name = "experiment-mcp"
version = "0.0.1"
description = "MCP server wrapping SweetPea (factorial design) + SweetBean (jsPsych DSL). Symmetric with psyneulink-mcp."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6",
]

[project.optional-dependencies]
# Domain libraries the eventual MCP tools will wrap. Kept under an extra so
# the bare server install stays lean and importing the server never pulls
# them in (mirrors how psyneulink-mcp gates `psyche`). Tool implementations
# must import sweetpea / sweetbean lazily inside their bodies behind
# try/except so the server boots cleanly without the extra installed.
experiments = [
    "sweetpea",
    "sweetbean",
    # TODO: pin once Phase 2 t6e is in flight and we know the minimum
    # versions that expose the APIs the generated tools depend on.
]

[tool.uv.sources]
# psyneulink-psyche is not yet on PyPI; resolve it from the sibling repo
# under the parent `psyneulink-ai/` workspace folder. Editable so changes
# in the sibling are picked up without a re-sync. Same pattern as
# `psyneulink-mcp/pyproject.toml`.
psyneulink-psyche = { path = "../psyneulink-psyche", editable = true }

[project.scripts]
experiment-mcp = "experiment_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    # PSYCHE schemas are pulled in for the dev install only until Phase 2
    # t6e starts wiring them into real tools. See `[tool.uv.sources]` above.
    "psyneulink-psyche",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experiment_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: hits real sweetpea / sweetbean / network; slow + side-effectful",
]
