[project]
name = "experiment-mcp"
version = "0.0.1"
description = "MCP server wrapping SweetPea (factorial design) + SweetBean (jsPsych DSL). Symmetric with psyneulink-mcp."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6",
    # Domain libraries the generated tools wrap. Resolved from upstream
    # main branches via [tool.uv.sources] below (NOT from PyPI) so we
    # generate against the live API surface, mirroring how
    # psyneulink-mcp pulls psyneulink from the upstream `devel` branch.
    "sweetpea",
    "sweetbean",
]

[project.optional-dependencies]
# Only required when using the Anthropic API adapter for build-time codegen.
# The default `claude_cli` adapter shells out to the local `claude` CLI and
# does not need this dep, so the install stays lean. Mirrors the
# psyneulink-mcp [project.optional-dependencies] block.
anthropic-api = ["anthropic>=0.40"]

[tool.uv.sources]
# psyneulink-psyche is not yet on PyPI; resolve it from the sibling repo
# under the parent `psyneulink-ai/` workspace folder. Editable so changes
# in the sibling are picked up without a re-sync. Same pattern as
# `psyneulink-mcp/pyproject.toml`.
psyneulink-psyche = { path = "../psyneulink-psyche", editable = true }
# SweetPea + SweetBean: pull from upstream default branches rather
# than PyPI so the generator codegens against live source. PyPI lags
# main by months in both packages. (sweetpea-py's default branch is
# `master`, not `main` — kept verbatim here so a future maintainer
# noticing the asymmetry doesn't "fix" it.)
sweetpea = { git = "https://github.com/sweetpea-org/sweetpea-py", branch = "master" }
sweetbean = { git = "https://github.com/AutoResearch/sweetbean", branch = "main" }

[project.scripts]
experiment-mcp           = "experiment_mcp.server:main"
experiment-mcp-generate  = "experiment_mcp.generator.orchestrator:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    # PSYCHE schemas are pulled in for the dev install. Used by the
    # generator + tools at codegen time.
    "psyneulink-psyche",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experiment_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: hits real sweetpea / sweetbean / network; slow + side-effectful",
]
